@@ -23,12 +23,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-net:commons-net:3.9.0'
+    implementation 'org.apache.commons:commons-dbcp2:2.10.0'
+    implementation 'commons-net:commons-net:3.10.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
-    implementation 'org.springframework:spring-jdbc:6.0.14'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.8.0.25.04'
+    implementation 'org.springframework:spring-jdbc:6.1.21'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
