@@ -35,6 +35,17 @@
                 <TimeBasedTriggeringPolicy interval="1"/>
             </Policies>
         </RollingFile>
+
+        <RollingFile name="transcriptQC" append="true" fileName="logs/transcriptQC.log" filePattern="logs/transcriptQC.log.%d{yyyy-MM}">
+            <PatternLayout pattern="%d{yyyy-MM-dd HH:mm:ss} %p [%c] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
+        <File name="transcriptQCSummary" append="false" fileName="logs/transcriptQCSummary.log">
+            <PatternLayout pattern="%m%n"/>
+            <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
+        </File>
     </Appenders>
 
     <Loggers>
@@ -59,6 +70,11 @@
         </Logger>
         <Logger name="aliases" level="debug" additivity="false">
             <AppenderRef ref="aliases"/>
+            <AppenderRef ref="Console" level="info"/>
+        </Logger>
+        <Logger name="transcriptQC" level="info" additivity="false">
+            <AppenderRef ref="transcriptQC"/>
+            <AppenderRef ref="transcriptQCSummary"/><!-- human readable -->
             <AppenderRef ref="Console" level="info"/>
         </Logger>
     </Loggers>
