@@ -5,7 +5,7 @@ APPDIR=/home/rgddata/pipelines/$APPNAME
 SERVER=`hostname -s | tr '[a-z]' '[A-Z]'`
 EMAIL_LIST=mtutaj@mcw.edu
 #if [ "$SERVER" = "REED" ]; then
-#  EMAIL_LIST="mtutaj@mcw.edu,jrsmith@mcw.edu"
+#  EMAIL_LIST="mtutaj@mcw.edu jrsmith@mcw.edu"
 #fi
 
 $APPDIR/_run.sh --load_rna_seqs --load_protein_seqs "$@" > $APPDIR/cron.log  2>&1
