@@ -1,3 +1,7 @@
+Jul 15, 2025
+  added transcript qc -- to withdraw transcripts associated with inactive genes
+    or transcripts that do not have entries in TRANSCRIPTS table
+
 Mar 22, 2024
   added BulkGeneWithdrawal
 
